@@ -1,3 +1,9 @@
+2010-01-16  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/variable.c (loadpath_handler):  Have "show loadpath" should
+	also list the environmental variable GNUPLOT_PS_DIR.
+	Bug #2933345
+
 2010-01-15  <ottxor@users.sourceforge.net>
 
 	* configure.in src/Makefile.am demo/Makefile.am.in:
